fix: table vertical align

--- a/src/stylesheets/markdown.scss
+++ b/src/stylesheets/markdown.scss
@@ -66,6 +66,7 @@
 
   th,
   td {
+    vertical-align: top;
     text-align: left;
 
     &:not(:last-child) {
